# vc-benchmarks

./: .clang-format  AdditinalCalculations.h  AoS.h  AovS.h  BenchmarkHelper.h  CMakeLists.txt  README.md  SoA.h  Sonst.h  VcToString.h  VectorizationHelper.h  additinalcalculations.h  additinolcalculations.h  addition.cpp  addition.h  aos.h  aovs.h  arithmetics.cpp  arithmetics.h  baseline.h  benchmark.h  benchmarkaddition.cpp  benchmarkarithmetics.cpp  benchmarkgenericmemorylayout.h  benchmarkhelper.h  benchmarkmemorylayout.cpp  fakereadmodify.h  loopunroll.cpp  main.cpp  mathfunctions.h  memorylayout.cpp  nearestneighbor.cpp  quadratic.cpp  registermodification.h  sincos.cpp  soa.h  testvalues.h  typelist.h  typetostring.h  vctostring.h  (+1 more)
